--- a/KataTests/KataTests.fsproj
+++ b/KataTests/KataTests.fsproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <Compile Include="Kata1\RomanNumeralsTests.fs" />
+        <Compile Include="Kata2\PeanoNumbersTests.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
