--- a/Katas/Katas.fsproj
+++ b/Katas/Katas.fsproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <Compile Include="Kata1\RomanNumerals.fs" />
+      <Compile Include="Kata2\PeanoNumbers.fs" />
     </ItemGroup>
 
 </Project>
