Kata3: intial stub of elevator kata
Took a stab at modeling with types, and laid out a trivial first
test.

--- a/KataTests/KataTests.fsproj
+++ b/KataTests/KataTests.fsproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <Compile Include="Kata1\RomanNumeralsTests.fs" />
         <Compile Include="Kata2\PeanoNumbersTests.fs" />
+        <Compile Include="Kata3\ElevatorTests.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
